# infrawatch

./: .gitignore  Cargo.toml  README.md  config.toml
.github/workflows/: release.yml
config/: infrawatch.example.toml
src/: daemon.rs  main.rs
src/alert/: discord.rs  mod.rs
src/analysis/: convert.rs  mod.rs  threshold.rs  types.rs
src/cloud/: aws.rs  mod.rs  types.rs
src/config/: check.rs  configs.rs  load.rs  mod.rs
src/system/: collector.rs  mod.rs  types.rs
tmp/: 99-3393-prompt  99-5901-prompt  99-7942-prompt  99-809-prompt
